<resources>
    <string name="appName">TP4: Counter with MVP</string>
    <string name="exclamation">!</string>
    <string name="helloToast">Hello</string>
    <string name="title">Hello World</string>
    <string name="insertText">Enter your name</string>
    <string name="buttonShowText">Show</string>
    <string name="errorToastMessage">Error. Number is empty</string>
    <string name="decreaseButton">Decrease</string>
    <string name="increaseButton">Increase</string>
    <string name="resetButton">Reset</string>
    <string name="countText">COUNT MVP</string>
    <string name="inputCountText">Enter a number</string>
    <string name="startValueCount">0</string>
    <string name="youAlreadyResetCounter">You already reset the counter.</string>
</resources>